[gd_scene load_steps=2 format=3 uid="uid://example3"]

[ext_resource type="Script" uid="uid://bc2e41if4kv6n" path="res://ui/sandbox/new/ant_profile_selector.gd" id="1_script"]

[node name="AntProfileSelector" type="Window"]
title = "Select Ant Profile"
position = Vector2i(0, 36)
size = Vector2i(300, 400)
script = ExtResource("1_script")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="SearchContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/SearchContainer"]
layout_mode = 2
text = "Search Profiles:"

[node name="SearchEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/SearchContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Type to search..."

[node name="ProfileList" type="ItemList" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
allow_reselect = true
allow_rmb_select = true

[node name="ButtonContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="SelectButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonContainer"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
text = "Select"

[node name="CancelButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Cancel"
